# network-schema

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  authentication.proto  base_types.proto  check.py  constants.txt  encoding.txt  entrypoint.proto  envelope.proto  error.proto  flake.nix  generate_protoc_go.bash  generate_testVectors_json.py  generate_typedData_json.py  go.mod  go.sum  go.sum.license  gomod2nix.toml  schema.proto  schema_pb2.py  schema_pb2.pyi  shop.proto  shop_events.proto  shop_requests.proto  state.proto  storage.proto  store_events.proto  store_events_pb2.py  store_events_pb2.pyi  store_requests.proto  subscription.proto  testVectors.json  transport.proto  typedData.json
cddl/: patch.cddl  shop.cddl  shop_hashed.cddl  shop_logical.cddl
deno/: deno.json  merkle.ts
go/: hamt.go  hamt_test.go  patch.go  patch2.go  patch2_listing.go  patch2_manifest.go  patch_add.go  patch_remove.go  patch_replace.go  patch_test.go  run.go  shop_schema.go  shop_schema_test.go  shop_vectors_test.go  utils.go  utils_test.go  vectors_patch_listing.cbor  (+8 more)
python/: Makefile  generate_hamt_test_vectors.py  pyproject.toml  tweak_imports.py
python/massmarket/: __init__.py  authentication_pb2.py  authentication_pb2.pyi  base_types_pb2.py  cbor_encoder.py  envelope_pb2.py  envelope_pb2.pyi  error_pb2.py  error_pb2.pyi  hamt.py  shop_requests_pb2.py  storage_pb2.py  storage_pb2.pyi  subscription_pb2.py  subscription_pb2.pyi  transport_pb2.py  transport_pb2.pyi
python/massmarket/cbor/: __init__.py  base_types.py  listing.py  manifest.py  order.py  patch.py
python/massmarket/mmr/: db.py  tableprint.py
python/massmarket_hash_event/: __init__.py  authentication_pb2.py  authentication_pb2.pyi  base_types_pb2.py  base_types_pb2.pyi  envelope_pb2.py  envelope_pb2.pyi  error_pb2.py  error_pb2.pyi  hamt.py  schema_pb2.py  schema_pb2.pyi  shop_events_pb2.py  shop_events_pb2.pyi  shop_pb2.py  shop_pb2.pyi  shop_requests_pb2.py  shop_requests_pb2.pyi  storage_pb2.py  storage_pb2.pyi  store_events_pb2.py  store_events_pb2.pyi  store_requests_pb2.py  subscription_pb2.py  subscription_pb2.pyi  transport_pb2.py  transport_pb2.pyi  typedData.json
python/massmarket_hash_event/cbor/: __init__.py  base_types.py  chain_address.py  ethereum_address.py  listing.py  manifest.py  order.py  patch.py  uint256.py
python/massmarket_hash_event/mmr/: README.md  algorithms.py  db.py  tableprint.py
python/mmr/: .gitignore  .note.xml  1d-2d-tree-equivalences.md  LICENSE.md  README.md  db.py  draft-bryce-cose-merkle-mountain-range-proofs.md  tableprint.py  test-vectors.md  tests.py
python/tests/: test_cbor_accounts.py  test_cbor_addresses.py  test_cbor_listing.py  test_cbor_manifest.py  test_cbor_order.py  test_cbor_patch.py  test_cbor_tag.py  test_encode.py  test_hamt.py  test_hamt_vectors.py  test_mmr.py  test_mmr_vector_proofs.py  test_pymerkle.py  test_signatures.py
(+82 files in other folders)
